--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
             <h2 class="text-5xl font-extrabold text-[#1C1C1C]">News & Events</h2>
             <p class="text-[#777] font-medium mx-auto w-[900px]">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
           </div>
-          <div class="grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
+          <div class="grid gap-5  justify-center grid-cols-1 md:grid-cols-2 lg:grid-cols-3 ">
             <!-- first card  -->
-            <div class="card w-[364px] bg-base-100 shadow-xl">
-              <figure><img  src="images/news-1.png" alt="Shoes" /></figure>
+            <div class="card h-[500px] bg-base-100 shadow-xl">
+              <figure><img class="w-full p-5 h-[448px]" src="images/news-1.png" alt="Shoes" /></figure>
               <div class="card-body">
                 <h6>Feb 05, 2027</h6>
                 <h2 class="card-title text-[#1C1C1C] text-xl">Collecting 8 points for discount</h2>
@@ -215,8 +215,8 @@
               </div>
             </div>
             <!-- second card  -->
-            <div class="card w-[364px] bg-base-100 shadow-xl">
-              <figure><img  src="images/news-2.png" alt="Shoes" /></figure>
+            <div class="card h-[500px] bg-base-100 shadow-xl">
+              <figure><img class="w-full p-5 h-[448px]" src="images/news-2.png" alt="Shoes" /></figure>
               <div class="card-body">
                 <h6>Feb 05, 2027</h6>
                 <h2 class="card-title text-[#1C1C1C] text-xl">Collecting 8 points for discount</h2>
@@ -226,9 +226,9 @@
                 </div>
               </div>
             </div>
-            <!-- Third card  -->
-            <div class="card w-[364px] bg-base-100 shadow-xl">
-              <figure><img src="images/news-3.png" alt="Shoes" /></figure>
+            <!-- third card  -->
+            <div class="card h-[500px] bg-base-100 shadow-xl">
+              <figure><img class="w-full p-5 h-[448px] rounded" src="images/news-3.png" alt="Shoes" /></figure>
               <div class="card-body">
                 <h6>Feb 05, 2027</h6>
                 <h2 class="card-title text-[#1C1C1C] text-xl">Collecting 8 points for discount</h2>
@@ -238,6 +238,7 @@
                 </div>
               </div>
             </div>
+            
           
           </div>
         </section>
